src/test/ui/editions/edition-imports-virtual-2015-gated.stderr
error[E0432]: unresolved import `E`
  --> $DIR/edition-imports-virtual-2015-gated.rs:8:5
   |
LL |     gen_gated!();
   |     ^^^^^^^^^^^^^ could not find `E` in `{{root}}`
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
